LendersApp/src/objects/DealDefaultFieldValue__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Default Deal field values</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Program_Id__c</fullName>
        <label>Bank Program Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Gross__c</fullName>
        <defaultValue>0.15</defaultValue>
        <label>Max % Gross</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Holdback__c</fullName>
        <label>Max Holdback %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Min_Factor_per_Month__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>Min. Factor per Month</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Business_Days__c</fullName>
        <defaultValue>21</defaultValue>
        <inlineHelpText>Number of business days per month</inlineHelpText>
        <label>Number of Business Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Set_Terms_as_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set the default for Terms to be Days</inlineHelpText>
        <label>Set Terms as Days</label>
        <type>Checkbox</type>
    </fields>
    <label>DealDefaultFieldValue</label>
</CustomObject>